// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Matches snapshot (closed) 1`] = `
<body
  class=""
  style="overflow: unset;"
>
  <div />
  <div
    class="ReactModalPortal"
  />
</body>
`;

exports[`Modal Matches snapshot (no close button, desktop) 1`] = `
<body
  class="ReactModal__Body--open"
  style="overflow: hidden;"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  .c0 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius-2x);
  box-shadow: 0 6px 10px 0 rgba(0,0,0,0.1);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: calc(100vh - var(--spacing-2x));
  max-width: 700px;
  min-width: calc(480px - var(--spacing-4x));
  position: relative;
  width: 60vw;
}

.c0::after {
  content: '';
  display: block;
  padding-bottom: var(--spacing-4x);
}

.c0:focus {
  border-color: #006296;
  box-shadow: 0 0 0 2px #00629666,0 6px 10px 0 rgba(0,0,0,0.1);
  outline: none;
}

.c1 {
  max-height: 100%;
  overflow-y: auto;
  padding: var(--spacing-4x) var(--spacing-4x) 0;
}

<div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay"
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(255, 255, 255, 0.75); align-items: center; display: flex; justify-content: center; z-index: 10000;"
    >
      <div
        aria-describedby="modal-description"
        aria-label="Test modal"
        aria-modal="true"
        class="ReactModal__Content c0"
        role="dialog"
        tabindex="-1"
      >
        <main
          class="c1"
        >
          <p
            id="modal-description"
          >
            Test Content
          </p>
        </main>
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal Matches snapshot (no close button, mobile) 1`] = `
<body
  class="ReactModal__Body--open"
  style="overflow: hidden;"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  .c0 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius-2x);
  box-shadow: 0 6px 10px 0 rgba(0,0,0,0.1);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: calc(100vh - var(--spacing-2x));
  max-width: 700px;
  min-width: initial;
  position: relative;
  width: calc(100vw - var(--spacing-2x));
}

.c0::after {
  content: '';
  display: block;
  padding-bottom: var(--spacing-2x);
}

.c0:focus {
  border-color: #006296;
  box-shadow: 0 0 0 2px #00629666,0 6px 10px 0 rgba(0,0,0,0.1);
  outline: none;
}

.c1 {
  max-height: 100%;
  overflow-y: auto;
  padding: var(--spacing-3x) var(--spacing-2x) 0;
}

<div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay"
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(255, 255, 255, 0.75); align-items: center; display: flex; justify-content: center; z-index: 10000;"
    >
      <div
        aria-describedby="modal-description"
        aria-label="Test modal"
        aria-modal="true"
        class="ReactModal__Content c0"
        role="dialog"
        tabindex="-1"
      >
        <main
          class="c1"
        >
          <p
            id="modal-description"
          >
            Test Content
          </p>
        </main>
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal Matches snapshot (noPadding) 1`] = `
<body
  class="ReactModal__Body--open"
  style="overflow: hidden;"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  .c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 32px;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2:focus {
  outline: none;
}

.c2:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #00629666;
}

.c2:not(:disabled) {
  cursor: pointer;
}

.c2 > svg {
  color: inherit;
}

.c3 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: 32px;
}

.c3:focus {
  outline: none;
}

.c3:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #00629666;
}

.c3:hover {
  background-color: #DBDEE1;
  color: #000000;
}

.c3:disabled {
  background-color: transparent;
  color: #B7BBC2;
}

.c3:focus {
  background-color: #FFFFFF;
  border-color: #006296;
  color: #60666E;
}

.c0 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius-2x);
  box-shadow: 0 6px 10px 0 rgba(0,0,0,0.1);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: calc(100vh - var(--spacing-2x));
  max-width: 700px;
  min-width: calc(480px - var(--spacing-4x));
  position: relative;
  width: 60vw;
}

.c0::after {
  content: '';
  display: block;
  padding-bottom: 0;
}

.c0:focus {
  border-color: #006296;
  box-shadow: 0 0 0 2px #00629666,0 6px 10px 0 rgba(0,0,0,0.1);
  outline: none;
}

.c1 {
  max-height: 100%;
  overflow-y: auto;
  padding: 0 0 0;
}

.c4 {
  position: absolute;
  right: var(--spacing-1x);
  top: var(--spacing-1x);
}

<div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay"
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(255, 255, 255, 0.75); align-items: center; display: flex; justify-content: center; z-index: 10000;"
    >
      <div
        aria-describedby="modal-description"
        aria-label="Test modal"
        aria-modal="true"
        class="ReactModal__Content c0"
        role="dialog"
        tabindex="-1"
      >
        <main
          class="c1"
        >
          <p
            id="modal-description"
          >
            Test Content
          </p>
        </main>
        <button
          aria-label="Close dialog"
          class="c2 c3 c4"
          data-testid="close-button"
          type="button"
        >
          <svg
            aria-hidden="true"
            color="currentColor"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal Matches snapshot (opened, desktop) 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 32px;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2:focus {
  outline: none;
}

.c2:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #00629666;
}

.c2:not(:disabled) {
  cursor: pointer;
}

.c2 > svg {
  color: inherit;
}

.c3 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: 32px;
}

.c3:focus {
  outline: none;
}

.c3:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #00629666;
}

.c3:hover {
  background-color: #DBDEE1;
  color: #000000;
}

.c3:disabled {
  background-color: transparent;
  color: #B7BBC2;
}

.c3:focus {
  background-color: #FFFFFF;
  border-color: #006296;
  color: #60666E;
}

.c0 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius-2x);
  box-shadow: 0 6px 10px 0 rgba(0,0,0,0.1);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: calc(100vh - var(--spacing-2x));
  max-width: 700px;
  min-width: calc(480px - var(--spacing-4x));
  position: relative;
  width: 60vw;
}

.c0::after {
  content: '';
  display: block;
  padding-bottom: var(--spacing-4x);
}

.c0:focus {
  border-color: #006296;
  box-shadow: 0 0 0 2px #00629666,0 6px 10px 0 rgba(0,0,0,0.1);
  outline: none;
}

.c1 {
  max-height: 100%;
  overflow-y: auto;
  padding: var(--spacing-4x) var(--spacing-4x) 0;
}

.c4 {
  position: absolute;
  right: var(--spacing-1x);
  top: var(--spacing-1x);
}

<body
  class="ReactModal__Body--open"
  style="overflow: hidden;"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay"
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(255, 255, 255, 0.75); align-items: center; display: flex; justify-content: center; z-index: 10000;"
    >
      <div
        aria-describedby="modal-description"
        aria-label="Test modal"
        aria-modal="true"
        class="ReactModal__Content c0"
        role="dialog"
        tabindex="-1"
      >
        <main
          class="c1"
        >
          <p
            id="modal-description"
          >
            Test Content
          </p>
        </main>
        <button
          aria-label="Close dialog"
          class="c2 c3 c4"
          data-testid="close-button"
          type="button"
        >
          <svg
            aria-hidden="true"
            color="currentColor"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal Matches snapshot (opened, mobile) 1`] = `
<body
  class="ReactModal__Body--open"
  style="overflow: hidden;"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  .c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.53px;
  -moz-letter-spacing: 0.53px;
  -ms-letter-spacing: 0.53px;
  letter-spacing: 0.53px;
  line-height: 1.5rem;
  min-height: 48px;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2:focus {
  outline: none;
}

.c2:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #00629666;
}

.c2:not(:disabled) {
  cursor: pointer;
}

.c2 > svg {
  color: inherit;
}

.c3 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: 48px;
}

.c3:focus {
  outline: none;
}

.c3:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #00629666;
}

.c3:hover {
  background-color: #DBDEE1;
  color: #000000;
}

.c3:disabled {
  background-color: transparent;
  color: #B7BBC2;
}

.c3:focus {
  background-color: #FFFFFF;
  border-color: #006296;
  color: #60666E;
}

.c0 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius-2x);
  box-shadow: 0 6px 10px 0 rgba(0,0,0,0.1);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: calc(100vh - var(--spacing-2x));
  max-width: 700px;
  min-width: initial;
  position: relative;
  width: calc(100vw - var(--spacing-2x));
}

.c0::after {
  content: '';
  display: block;
  padding-bottom: var(--spacing-2x);
}

.c0:focus {
  border-color: #006296;
  box-shadow: 0 0 0 2px #00629666,0 6px 10px 0 rgba(0,0,0,0.1);
  outline: none;
}

.c1 {
  max-height: 100%;
  overflow-y: auto;
  padding: var(--spacing-6x) var(--spacing-2x) 0;
}

.c4 {
  position: absolute;
  right: var(--spacing-half);
  top: var(--spacing-half);
}

<div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay"
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(255, 255, 255, 0.75); align-items: center; display: flex; justify-content: center; z-index: 10000;"
    >
      <div
        aria-describedby="modal-description"
        aria-label="Test modal"
        aria-modal="true"
        class="ReactModal__Content c0"
        role="dialog"
        tabindex="-1"
      >
        <main
          class="c1"
        >
          <p
            id="modal-description"
          >
            Test Content
          </p>
        </main>
        <button
          aria-label="Close dialog"
          class="c2 c3 c4"
          data-testid="close-button"
          type="button"
        >
          <svg
            aria-hidden="true"
            color="currentColor"
            focusable="false"
            height="24"
            width="24"
          />
        </button>
      </div>
    </div>
  </div>
</body>
`;
